# pyOxide

./: .flake8  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  DEVELOPMENT_TOOLS.md  FEATURES.md  LICENSE  ORG_PUBLISHING_GUIDE.md  QUICK_REFERENCE.md  README.md  TODO.md  WORKFLOW_NOTICE.md  analyze_packet.py  bandit-report.json  demo_adduser.py  docker-compose.yml  pyproject.toml  requirements.txt  test_adduser.py  test_auth_login.py  test_auth_sessions.py  test_auth_users.py  test_django_login.py  test_routes.py  test_session_key.py  test_tcp_hex.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci-cd.yml  code-quality.yml  publish-coverage.yml  test-coverage.yml
data/: README.md
docs/: FEATURES.md  NPS_PROTOCOL_SPEC.md  PACKET_ANALYSIS.md  PROTOCOL_SPEC_TEMPLATE.md  README.md
docs/development/: DEVELOPMENT.md  ORG_PUBLISHING_GUIDE.md  TESTING.md
examples/: README.md  demo_adduser.py  test_adduser.py
reports/: README.md
scripts/: coverage_status.py  coverage_status_enhanced.py  generate_badges.py
services/sslProxy/: Dockerfile  nginx.conf
spec1/: AnalyzeAPI.h  CUSTOM1_PROTOCOL.md  GLDP_UserStatus.h  Log.h  MessageTypes.h  NPS2_Client.h  NPSClientDllTypes.h  NPSComm.h  NPSDll.h  NPSDll_Types.h  NPSLoadDll.h  NPSLoginDll.cpp  NPSLoginDll.h  NPSPacketProfile.h  NPSPush.h  NPSThread.h  NPSTypes.h  NPSUserLogin.h  NPS_Serialize.h  NPS_SessionKey.h  NPS_Utils.h  cQ.h  cSmartPtr.h
src/: __init__.py  _version.py  command_handler.py  django_integration.py  http_handler.py  main.py  packet_parser.py  server_manager.py  session_key_decryptor.py  shard_manager.py
src/django_app/: settings.py  urls.py  views.py  wsgi.py
src/django_app/pyoxide_admin/: __init__.py  admin.py  apps.py  models.py
src/django_app/pyoxide_admin/migrations/: 0001_initial.py  0002_authsessions_authusers_serverstatus_delete_serverlog_and_more.py
src/django_app/pyoxide_admin/models/: __init__.py  auth.py  config.py  logging.py
templates/: 404.html  auth_login.html  base.html  django_dashboard.html  home.html  license.html  shard_list.txt  test_pages.html
tests/: __init__.py  conftest.py  test_command_handler.py  test_http_handler.py  test_http_routes.py  test_main.py  test_packet_parser.py  test_server_manager.py
tests/integration/: README.md  test_auth_login.py  test_auth_sessions.py  test_auth_users.py  test_django_login.py  test_routes.py
